I first enabled a back button from the View Resource screen to the Resource Category screen (though it doesn't work yet) and then I turned the View Event page into a listview as well.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,10 +79,10 @@
             android:label="@string/title_activity_view_resource"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".ResourceCategory">
-                <!--<meta-data-->
-                    <!--android:name="android.support.ResourceCategory"-->
-                    <!--android:value="com.example.delia_grimes.charterconnect">-->
-                <!--</meta-data>-->
+                <meta-data
+                    android:name="android.support.ResourceCategory"
+                    android:value="com.example.delia_grimes.charterconnect">
+                </meta-data>
         </activity>
         <activity
             android:name=".EventsMain"
